Validate consumer metadata attribute in test